--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,26 +1,27 @@
 {
     "version": "2.0.0",
     "tasks": [
-		{
-			"type": "shell",
-			"label": "Build osx_main",
-			"command": "/usr/bin/clang",
-			"args": [
-				"-g",
-				"-o",
-				"builds/handmade",
-				"code/osx_main.mm"
-			],
-			"options": {
-				"cwd": "${workspaceFolder}"
-			},
-			"problemMatcher": [
-				"$gcc"
-			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			}
-		}
-	]
+        {
+            "type": "shell",
+            "label": "Build osx_main",
+            "command": "/usr/bin/clang",
+            "args": [
+                "-g",
+                "-framework", "AppKit",
+                "-o",
+                "build/simple-mac-window",
+                "code/osx_main.mm"
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        }
+    ]
 }
